[package]
name = "bevy_zeroverse"
description = "bevy zeroverse synthetic dataset generator"
version = "0.17.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "zeroverse",
  "machine-learning",
  "synthetic-data",
]
categories = [
  "computer-vision",
  "graphics",
  "rendering",
]
homepage = "https://github.com/mosure/bevy_zeroverse"
repository = "https://github.com/mosure/bevy_zeroverse"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "viewer"


[workspace]
members = [
  ".",
  "ffi",
]


[features]
default = [
  "development",
  "extension-module",
  "multi_threaded",
  "viewer",
]

multi_threaded = [
  "bevy/multi_threaded",
]

development = ["bevy/dynamic_linking"]

extension-module = ["pyo3/extension-module"]

perftest = []
plucker = []
python = ["extension-module", "pyo3", "webgpu"]

viewer = [
  "bevy_egui",
  "bevy-inspector-egui",
  "bevy_panorbit_camera",
  "bevy/bevy_ui",
]

web = [
  "viewer",
  "webgpu",
]

webgl2 = ["bevy/webgl2"]
webgpu = [
  "bevy/webgpu",
]


[dependencies]
bevy_args = "2.0"
bevy_egui = { version = "0.38", optional = true }
bevy-inspector-egui = { version = "0.35", optional = true }
bevy_panorbit_camera = { version = "0.32", optional = true, features = ["bevy_egui"] }
clap = { version = "4.5", features = ["derive"] }
futures-intrusive = "0.5"
glob = "0.3"
itertools = "0.14"
noise = { version = "0.9" }
pollster = "0.4"
pyo3 = { version = "0.23", features = ["macros"], optional = true }
rand = "0.9"
rayon = { version = "1.11", optional = true }
serde = "1.0"
strum = "0.27"
strum_macros = "0.27"
wgpu = "26"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.bevy]
version = "0.17"
default-features = false
features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_image",
  "bevy_log",
  "bevy_light",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_render",
  "bevy_post_process",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "jpeg",
  "png",
  "std",
  "tonemapping_luts",
  "webgpu",
  "x11",
  "zstd_rust",
]


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"

[[bin]]
name = "viewer"
path = "src/viewer.rs"
