[package]
name = "bevy_zeroverse_ffi"
description = "bevy zeroverse ffi library"
version = "0.11.0"
edition = "2021"
license = "MIT"
default-run = "generate"


[features]
default = ["extension-module"]

extension-module = [
  "bevy_zeroverse/extension-module",
  "pyo3/extension-module",
]


[dependencies]
bevy_args = "1.6"
bevy_zeroverse = { path = "../", default-features = false, features = ["python"] }
# bevy_zeroverse = { version = "0.8", default-features = false, features = ["python"] }
bytemuck = "1.17"
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
ndarray = { version = "0.16", features = ["blas"] }
once_cell = "1.19"
pyo3 = { version = "0.23", features = ["macros"] }
pyo3-log = "0.12"
safetensors = "0.5"
serde = "1.0"


[dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
]


[lib]
name = "bevy_zeroverse_ffi"
path = "src/lib.rs"


[[bin]]
name = "generate"
path = "src/generate.rs"
