[package]
name = "bevy_zeroverse_ffi"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy_zeroverse = { path = "../../" }
image = "0.25"
ndarray = { version = "0.15", features = ["blas"] }
once_cell = "1.19"
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-log = "0.11"


[dependencies.bevy]
version = "0.14"
default-features = false
features = [
  "bevy_asset",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
]


[lib]
name = "bevy_zeroverse"
path = "src/lib.rs"
